# spaceship

./: Cargo.toml  flake.nix
assets/: README.md
src/: forces.rs  main.rs  orbit.rs
