[package]
name = "spaceflight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
ahash = "0.8.3"
bevy = { version = "0.11.2", features = [] }
bevy_rapier3d = { version = "0.22.0", features = [
    "simd-stable",
    "debug-render-3d",
] }
glam = { version = "0.24.1", features = ["debug-glam-assert"] }
orbital = { git = "https://github.com/oli-obk/solar_sailors.git", rev = "2fabdd044f0f362595494dcad5102c50ae9572f7" }
